fixed mobile navbar collapse, transition(css)

--- a/biz-cards-front/src/App.css
+++ b/biz-cards-front/src/App.css
@@ -1,6 +1,7 @@
 /*Global*/
 * {
   font-family: "Merienda", cursive;
+  transition: all 0.5s ease-in-out;
 }
 
 /*Header*/
